[package]
name = "portfolio-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.17.0"
mongodb = "2.1.0"
serde = "1.0.136"
native-dialog = "0.6.3"
serde_json = "1.0.79"
image = "0.24.1"
futures = "0.3.21"
const_env = "0.1.2"
regex = "1.5.5"
rustc-serialize = "0.3.24"

[dependencies.egui_extras]
version = "0.17.0"
features = ["image"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.1"
features= ["codec"]

[dependencies.reqwest]
version = "0.11.10"
features = ["multipart", "stream"]
